# darwin-metrics

./: .cursorignore  .gitignore  Cargo.toml  NOTICE  Package.swift  README.md  bacon.toml  build.rs  changelog-configuration.json  clippy.toml  lcov.info  rustfmt.toml
.cargo/: config.local.toml  config.toml
.cursor/: mct.json
.cursor/rules/: comprehensive-development-guidelines.mdc  integrated-c-objc-swift-policy.mdc  rust-async-development-ruleset.mdc  tauri-typescript-development-ruleset.mdc
.github/: changelog-configuration.json  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  mdbook.yml  release.yml  rust.yml
.trunk/: trunk.yaml
coverage/: lcov.info
docs/: CHANGELOG.md  CHECKLIST.md  RELEASE_0_1_0.md  ROADMAP.md  RUST_API_CHECKLIST.md  TESTING.md  TODO.md  book.toml  custom.css
docs/src/: SUMMARY.md  getting-started.md  introduction.md
docs/src/advanced/: ffi.md
docs/src/development/: architecture.md  contributing.md  roadmap.md
docs/src/modules/: battery.md  cpu.md  disk.md  error.md  gpu.md  memory.md  network.md  process.md  resource.md  thermal.md  utils.md
examples/: cpu_monitoring.rs  disk_monitor.rs  gpu_info.rs  gpu_monitor.rs  gpu_monitor_safe.rs  gpu_monitor_simple.rs  gpu_monitor_simplified.rs  gpu_monitoring.rs  gpu_static.rs  hardware_monitoring.rs  memory_monitor.rs  memory_monitor_async.rs  memory_monitoring.rs  mock_resource_monitor.rs  network_async.rs  network_info.rs  network_monitor.rs  network_monitoring.rs  power_monitor.rs  power_monitor_async.rs  power_monitoring.rs  process_monitoring.rs  resource_monitor.rs  smc_key_test.rs  system_monitoring.rs
src/: docs_rs_stubs.rs  error.rs  lib.rs  system.rs  test_utils.rs
src/architecture/: mod.rs
src/battery/: constants.rs  mod.rs  monitors.rs  tests.rs  types.rs
src/core/: mod.rs  prelude.rs
src/core/metrics/: hardware.rs  mod.rs  types.rs
src/core/types/: mod.rs
src/cpu/: constants.rs  cpu_impl.rs  mod.rs  monitors.rs  types.rs
src/disk/: constants.rs  disk_impl.rs  mod.rs  monitors.rs  tests.rs  types.rs
src/ffi/: mod.rs  tests.rs
src/frequency/: mod.rs
src/gpu/: constants.rs  gpu_impl.rs  mod.rs  monitors.rs  types.rs
src/hardware/: core.rs  mod.rs
src/hardware/battery/: mod.rs  monitors.rs  types.rs
src/hardware/battery/monitors/: capacity.rs  health.rs  mod.rs  power.rs  temperature.rs
src/hardware/cpu/: cpu.rs  cpu_impl.rs  frequency.rs  mod.rs  tests.rs
src/hardware/cpu/monitors/: frequency.rs  mod.rs  temperature.rs  utilization.rs
src/hardware/disk/: mod.rs  types.rs
src/hardware/disk/monitors/: health.rs  io.rs  mod.rs  mount.rs  performance.rs  storage.rs  utilization.rs
src/hardware/gpu/: characteristics.rs  gpu.rs  gpu_impl.rs  memory.rs  mod.rs  temperature.rs  tests.rs  utilization.rs
src/hardware/gpu/monitors/: characteristics.rs  memory.rs  mod.rs  temperature.rs  utilization.rs
src/hardware/iokit/: mock.rs  mod.rs  tests.rs
src/hardware/iokit/tests/: fan_tests.rs  gpu_tests.rs  mod.rs  service_tests.rs  smc_tests.rs  thermal_tests.rs  types_tests.rs
src/hardware/memory/: mod.rs  tests.rs  types.rs
src/hardware/memory/monitors/: mod.rs  pressure.rs  swap.rs  temperature.rs  usage.rs
src/hardware/temperature/: constants.rs  mod.rs  tests.rs  types.rs
src/hardware/temperature/monitors/: ambient.rs  battery.rs  cpu.rs  fan.rs  gpu.rs  mod.rs
src/iokit/: mod.rs
src/memory/: constants.rs  mod.rs  monitors.rs  types.rs
src/network/: interface.rs  mod.rs  tests.rs  traffic.rs
src/power/: mod.rs  tests.rs
src/process/: mod.rs  tests.rs
src/resource/: mod.rs
src/swift/: SMC.swift  SystemMetrics.swift  bindings.rs  cpu_info.swift  darwin_metrics_swift_bridge.h  darwin_metrics_swift_bridge.swift  module.modulemap  test.swift
src/swift/darwin_metrics_swift_bridge/: module.modulemap
src/swift/tests/: test_ffi.swift
src/system/: mod.rs
src/temperature/: constants.rs  factory.rs  mod.rs  monitors.rs  old_iokit_stuff.rs  types.rs
src/tests/: mod.rs
src/traits/: hardware.rs  mod.rs
src/utils/: bindings.rs  bindings_tests.rs  dictionary_access.rs  mock_dictionary.rs  mod.rs  objc_utils.rs  property_utils.rs  property_utils_tests.rs  safe_dictionary.rs  test_utils.rs
src/utils/core/: dictionary.rs  mod.rs  property.rs
src/utils/ffi/: bindings.rs  mod.rs
src/utils/tests/: mod.rs
src/utils/tests/test_utils/: iokit_mock.rs  mocks.rs  mod.rs
src/utils/tests/unit/: bindings_tests.rs  dictionary_tests.rs  mod.rs  property_tests.rs
tests/: integration_tests.rs  smc_key_test.rs  version-sync.rs
tests/common/: mod.rs
tests/common/builders/: battery.rs  disk.rs  gpu.rs  iokit.rs  mod.rs  network.rs  power.rs  process.rs  temperature.rs
tests/common/mocks/: battery.rs  mod.rs
tests/integration/: battery.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  power.rs  process.rs  temperature.rs
tests/integration/iokit/: mod.rs
tests/unit/: mod.rs
tests/unit/battery/: mod.rs
tests/unit/battery/monitors/: capacity.rs  health.rs  mod.rs  power.rs  temperature.rs
tests/unit/cpu/: mod.rs
tests/unit/disk/: core.rs  mod.rs
tests/unit/disk/monitors/: health.rs  io.rs  mod.rs  mount.rs  performance.rs  storage.rs  utilization.rs
tests/unit/gpu/: core.rs  mod.rs
tests/unit/gpu/monitors/: characteristics.rs  memory.rs  mod.rs  temperature.rs  utilization.rs
tests/unit/iokit/: fan.rs  gpu.rs  mod.rs  service.rs  smc.rs  thermal.rs  types.rs
tests/unit/memory/: mod.rs
tests/unit/memory/monitors/: pressure.rs  swap.rs  usage.rs
tests/unit/network/: interface.rs  metrics.rs  mod.rs
tests/unit/power/: mod.rs
tests/unit/process/: mod.rs
tests/unit/temperature/: factory.rs  mod.rs  monitors.rs
tests/unit/temperature/monitors/: ambient.rs  battery.rs  cpu.rs  fan.rs  gpu.rs  mod.rs
tests/unit/utils/: mock_property.rs  mod.rs  property_utils_test.rs
