[package]
name = "darwin-metrics"
version = "0.1.4-2"
edition = "2021"
description = "A Rust library exposing native macOS system metrics"
authors = ["Stuart Meya <sm0sh1@pm.me>"]
license = "MIT"
repository = "https://github.com/sm-moshi/darwin-metrics"
homepage = "https://sm-moshi.github.io/darwin-metrics"
documentation = "https://docs.rs/darwin-metrics"
keywords = ["macos", "system", "metrics", "ffi", "swift"]
categories = ["os", "api-bindings"]
readme = "README.md"
links = "darwin_metrics"
exclude = [
  ".github/",
  "coverage/",
  "target/",
  "CLAUDE.md",
  "**/.DS_Store",
  ".DS_Store",
  "**/**/.DS_Store",
]

[lib]
name       = "darwin_metrics"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
cc = "1.2.16"

[dependencies]
# Platform-independent dependencies
libc               = "0.2.170"
tokio              = { version = "1.44.0", features = ["full"] }
futures            = "0.3.31"
async-trait        = "0.1.87"
thiserror          = "2.0.12"
tracing            = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde              = { version = "1.0.219", features = ["derive"] }
serde_json         = "1.0.140"
mockall            = "0.13.1"
parking_lot        = "0.12.3"
log                = "0.4.26"
once_cell          = "1.20.3"
scopeguard         = "1.2.0"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.10"
objc2 = { version = "0.6.0", features = [
  "alloc",
  "objc2-proc-macros",
  "std",
  "exception",
  "catch-all",
] }
objc2-foundation = "0.3.0"
objc2-core-foundation = "0.3.0"
objc2-core-graphics = "0.3.0"
block2 = { version = "0.6.0", features = ["alloc", "std"] }

[dev-dependencies]
version-sync = "0.9.5"

[features]
default = ["battery", "cpu", "memory", "gpu", "disk", "temperature", "async"]

# Core features
battery            = []
cpu                = []
memory             = []
gpu                = []
disk               = []
temperature        = []
process_monitoring = []

# Optional features
async = []

# Testing features
unstable-tests   = []
skip-ffi-crashes = [] # Skip FFI code that causes crashes in coverage

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
debug         = false
strip         = true

[profile.dev]
opt-level = 0
debug     = true

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
# Configure with proper flags for docs.rs build environment
rustdoc-args = ["--cfg", "docsrs"]
rustc-args   = ["--cfg", "docsrs"]
# Use x86_64-unknown-linux-gnu as the documentation target
# This prevents trying to build macOS code in the Linux container
default-target = "x86_64-unknown-linux-gnu"
targets        = ["x86_64-unknown-linux-gnu"]

[package.metadata]
minimum-macos-version = "10.11"

[package.metadata.llvm-cov]
enable    = ["line", "branch", "function", "mcdc"]
threshold = 80
exclude   = ["tests/*", "target/*", "**/*_test.rs"]
