[package]
name = "darwin-metrics"
version = "0.1.6"
edition = "2021"
description = "A Rust library exposing native macOS system metrics"
authors = ["Stuart Meya <sm0sh1@pm.me>"]
license = "MIT"
repository = "https://github.com/sm-moshi/darwin-metrics"
homepage = "https://github.com/sm-moshi/darwin-metrics"
documentation = "https://docs.rs/darwin-metrics"
keywords = ["macos", "system", "metrics", "ffi", "swift"]
categories = ["os", "api-bindings"]
readme = "README.md"
links = "darwin_metrics"
exclude = [
  ".github/",
  "coverage/",
  "target/",
  "CLAUDE.md",
  "**/.DS_Store",
  ".DS_Store",
]

[lib]
name       = "darwin_metrics"
crate-type = ["rlib", "cdylib", "staticlib"]

[build-dependencies]
cc = "1.2.16"

[dependencies]
# Core FFI and system interfaces
libc = "0.2.170"
libproc = "0.14.10"
objc2 = { version = "0.6.0", features = [
  "alloc",
  "objc2-proc-macros",
  "std",
  "exception",
  "catch-all",
] }
objc2-foundation = "0.3.0"
objc2-core-foundation = "0.3.0"
objc2-core-graphics = "0.3.0"
block2 = { version = "0.6.0", features = ["alloc", "std"] }
scopeguard = "1.2.0"

# Error handling and logging
tokio              = { version = "1.44.1", features = ["full"] }
futures            = "0.3.31"
async-trait        = "0.1.88"
thiserror          = "2.0.12"
tracing            = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Serialization and data handling
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Testing
mockall = "0.13.1"

# Additional dependencies
parking_lot = "0.12.3"
log         = "0.4.27"
once_cell   = "1.21.1"

[dev-dependencies]
version-sync = "0.9.5"

[features]
default = ["battery", "cpu", "memory", "gpu", "disk", "temperature", "async"]

# Core features
battery            = []
cpu                = []
memory             = []
gpu                = []
disk               = []
temperature        = []
process_monitoring = []

# Optional features
async = []

# Testing features
unstable-tests   = []
skip-ffi-crashes = []

[package.metadata]
minimum-macos-version = "10.11"

[package.metadata.llvm-cov]
enable    = ["line", "branch", "function", "mcdc"]
threshold = 80
exclude   = ["tests/*", "target/*", "**/*_test.rs"]
